add google sense script

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,12 @@
     <meta name="theme-color" content="#000000" />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <!-- Google Adsense  -->
+    <script
+      data-ad-client="ca-pub-7302110653123625"
+      async
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"
+    ></script>
     <title>Naruto Quest</title>
   </head>
   <body>
